@@ -17,7 +17,7 @@
 
 name			OpenWebMail
 version			2.52
-releasedate		20070703
+releasedate		20070706
 
 # this property is updated automatically by the SVN server
 revision		$Rev$
